[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Squada.tres" type="DynamicFont" id=2]
[ext_resource path="res://Textures/emptyitem.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Squada2.tres" type="DynamicFont" id=4]

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="HealthLabel" type="RichTextLabel" parent="Control"]
margin_left = 2.0
margin_top = 5.0
margin_right = 81.0
margin_bottom = 52.0
custom_fonts/normal_font = ExtResource( 2 )
text = " Health: "

[node name="HealthValue" type="RichTextLabel" parent="Control"]
margin_left = 81.0
margin_top = 5.0
margin_right = 191.0
margin_bottom = 49.0
custom_fonts/normal_font = ExtResource( 2 )
text = "100
"

[node name="KillsLabel" type="RichTextLabel" parent="Control"]
margin_left = 32.0
margin_top = 576.0
margin_right = 99.0
margin_bottom = 601.0
custom_fonts/normal_font = ExtResource( 2 )
text = " Kills:"

[node name="KillsValue" type="RichTextLabel" parent="Control"]
margin_left = 99.0
margin_top = 576.0
margin_right = 139.0
margin_bottom = 616.0
custom_fonts/normal_font = ExtResource( 2 )
text = "0"

[node name="DeathsLabel" type="RichTextLabel" parent="Control"]
margin_left = 256.0
margin_top = 576.0
margin_right = 341.0
margin_bottom = 616.0
custom_fonts/normal_font = ExtResource( 2 )
text = " Deaths:"

[node name="DeathsValue" type="RichTextLabel" parent="Control"]
margin_left = 342.526
margin_top = 576.0
margin_right = 382.526
margin_bottom = 614.313
custom_fonts/normal_font = ExtResource( 2 )
text = "0"

[node name="AccuracyLabel" type="RichTextLabel" parent="Control"]
margin_left = 512.0
margin_top = 576.0
margin_right = 640.0
margin_bottom = 616.0
custom_fonts/normal_font = ExtResource( 2 )
text = " Accuracy:"

[node name="AccuracyValue" type="RichTextLabel" parent="Control"]
margin_left = 622.105
margin_top = 576.0
margin_right = 773.105
margin_bottom = 616.0
custom_fonts/normal_font = ExtResource( 2 )
text = "0"

[node name="ScoreLabel" type="RichTextLabel" parent="Control"]
margin_left = 168.0
margin_top = 5.0
margin_right = 294.0
margin_bottom = 45.0
custom_fonts/normal_font = ExtResource( 2 )
text = " Score:"

[node name="ScoreValue" type="RichTextLabel" parent="Control"]
margin_left = 242.316
margin_top = 5.0
margin_right = 393.316
margin_bottom = 45.0
custom_fonts/normal_font = ExtResource( 2 )
text = "0"

[node name="Crossbow" type="Sprite" parent="Control"]
position = Vector2( 800, 549.474 )
texture = ExtResource( 3 )

[node name="Pistol" type="Sprite" parent="Control"]
position = Vector2( 832, 549.474 )
scale = Vector2( 0.999999, 1 )
texture = ExtResource( 3 )

[node name="Rifle" type="Sprite" parent="Control"]
position = Vector2( 864, 549.474 )
texture = ExtResource( 3 )

[node name="PlasmaGun" type="Sprite" parent="Control"]
position = Vector2( 896, 549.474 )
texture = ExtResource( 3 )

[node name="Rocket" type="Sprite" parent="Control"]
position = Vector2( 928, 549.474 )
texture = ExtResource( 3 )

[node name="Minigun" type="Sprite" parent="Control"]
position = Vector2( 960, 549.474 )
texture = ExtResource( 3 )

[node name="RobotArm" type="Sprite" parent="Control"]
position = Vector2( 992, 549.474 )
texture = ExtResource( 3 )

[node name="PlayerMessage" type="Label" parent="Control"]
anchor_right = 1.0
margin_bottom = 73.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "GLHF!"
align = 1
